[package]
name = "major_server"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = {version = "^0.3", features = ["tls", "compression"]}
tokio = {version = "^1.0.0", features = ["rt-multi-thread", "time", "sync", "fs", "macros", "io-util", "parking_lot"]}
ctrlc = "*"
tokio-stream = "^0.1.3"
serde = {version = "*", features = ["derive"]}
serde_json = "*"
bincode = "*"
once_cell = "*"
futures = "*"
percent-encoding = "^2.1.0"
chrono = "^0.4"
parking_lot = "^0.11.1"
dashmap = "4.0.2"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"


[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
rpath = false